# cargo-print

./: Cargo.toml  README.md  azure-pipelines.yml  build.rs
.github/: dependabot.yml
src/: main.rs
