[package]
name = "cargo-print"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = []
keywords = ["cargo"]
description = """
A cargo subcommand to print information in a shell-convenient format.
"""
repository = "https://github.com/alecmocatta/cargo-print"
homepage = "https://github.com/alecmocatta/cargo-print"
documentation = "https://docs.rs/cargo-print/0.1.0"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/cargo-print", pipeline = "tests" }
maintenance = { status = "passively-maintained" }

[dependencies]
cargo_metadata = "0.8"
